istio/employee-deployment_default_namespace.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  arun-emp-deployment
  labels:
    name:  arun-emp-deployment
spec:
  progressDeadlineSeconds: 2
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 1
  minReadySeconds: 0
  replicas: 2
  selector:
    matchLabels:
      app: "arun-emp"
      version: 0.0.01
  template:
    metadata:
      name: "arun-emp-pod"
      namespace: "default"
      labels:
        app: "arun-emp"
        version: 0.0.01
    spec:
      containers:
        - image: arun-emp:latest
          name: arun-emp-container
          ports:
            - name: "http"
              containerPort: 8081
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: "/employee/all"
              port: 8081
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 15
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: "/employee/all"
              port: 8081
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 15
            successThreshold: 1
