istio/employee-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "arun-emp-service"
  labels:
    app: "arun-emp-service"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app: "arun-emp"
