istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-default-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts: ["*"]
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts: ["*"]
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
