istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
spec:
  hosts:
    - "*"
  gateways:
    - istio-default-gateway
  http:
    - name: "reviews-v2-routes"
      match:
        - uri:
            prefix: "/emp"
      rewrite:
        uri: "/employee"
      route:
        - destination:
            host: "arun-emp-service.default.svc.cluster.local"
            subset: v1 #destination.subsets.name
